# Build_App_from_PRD

./: .gitignore  pyproject.toml
.claude/: settings.local.json
config/: country_rules.xlsx  currency_rules.xlsx  field_patterns.yaml  output_template.xlsx
data/: 12.09鋐利-中磊( 进口）-蜂鸣器.xlsx  12.15 发票箱单模版-苏州.xlsx  12.8 发票箱单模版-苏州.xlsx  12.9 TXC 发票箱单模版-TXC2512CQ103.xlsx  20251218 蘇州中磊INV & PKL.xlsx  AEI2500536 中怡SerNet-DSPG R.xlsx  INV&PL 20005025120801.xlsx  JSNT进口资料1209.xlsx  JSNT进口资料1212.xlsx  上海健三電子有限公司.xlsx  中磊 发票箱单模版(5)(3).xlsx  中磊 发票箱单模版(5).xlsx  中磊(蘇州)AVT251216A-074.xlsx  中磊出貨文件202512150003.xlsx  中磊出货资料1211.xlsx  中磊电子(苏州)有限公司(S)+SL2512150065 物流园.xlsx  全进科技股份有限公司.xlsx  凡允股份有限公司.xlsx  副本S510B昆山 一号快车物流 2025.12.9.xlsx  加高電子股份有限公司.xlsx  友順科技股份有限公司.xlsx  合肥晶威特電子科技有限公司.xlsx  寰泰科技(英屬維京群島)有限公司.xlsx  振遠科技股份有限公司.xlsx  敏洲科技有限公司.xlsx  文曄科技股份有限公司.xlsx  新加坡商普思電子有限公司.xlsx  新加坡商络.xlsx  新加坡商络2.xlsx  新捷盛-.xlsx  泰科(香港)科技有限公司.xlsx  登壹企業股份有限公司.xlsx  禾伸堂-.xlsx  穩得實業股份有限公司.xlsx  立寰科技股份有限公司.xlsx  聯寶電子股份有限公司.xlsx  茂綸股份有限公司.xls  華新科技股份有限公司.xlsx  西北臺慶科技股份有限公司 1.xlsx  香港岑科電子國際有限公司.xlsx  (+1 more)
docs/: PRD.md  architecture.md
src/autoconvert/: __init__.py  __main__.py  batch.py  cli.py  column_map.py  config.py  config_helpers.py  errors.py  extract_invoice.py  (+13 more)
tests/: conftest.py  test_batch.py  test_column_map.py  test_config.py  test_diagnostic.py  test_errors.py  test_extract_invoice.py  test_extract_packing.py  test_integration.py  test_merge_tracker.py  test_models.py  test_output.py  test_report.py  test_sheet_detect.py  test_transform.py  test_utils.py  test_validate.py  test_weight_alloc.py
(+5 files in other folders)
