[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoconvert"
version = "0.1.0"
description = "CLI tool for vendor Excel to customs template conversion"
requires-python = ">=3.11"
dependencies = [
    "openpyxl==3.1.5",
    "xlrd==2.0.2",
    "PyYAML==6.0.3",
    "pydantic>=2.12,<3",
]

[project.scripts]
autoconvert = "autoconvert.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autoconvert"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pytest>=9",
    "ruff>=0.15",
    "pyright>=1.1",
]
